[package]
name = "bongwater"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
regex = "1.8.4"
serenity = { version = "0.11", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
titlecase = "2.2.1"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
unicode-segmentation = "1.10.1"
